--- a/XmlStorage/Extensions/Forms/ZettaImportDriverPackDialog.xml
+++ b/XmlStorage/Extensions/Forms/ZettaImportDriverPackDialog.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <SmsFormData FormatVersion="1.0" xmlns="http://schemas.microsoft.com/SystemsManagementServer/2005/03/ConsoleFramework">
   <Form Id="{3fa94def-4ff8-41d1-94c8-0a63af4045ba}" FormType="Wizard" DisableSkippable="true">
-    <Assembly Name="Zetta.ConfigMgr.IntegrationKit" Namespace="Zetta.ConfigMgr.IntegrationKit" />
+    <Assembly Name="Zetta.ConfigMgr.QuickTools" Namespace="Zetta.ConfigMgr.QuickTools" />
     <Resources>
       <Icon Name="icon" />
     </Resources>
