--- a/Extensions/Forms/QuickToolsDriverPackageImportWizard.xml
+++ b/Extensions/Forms/QuickToolsDriverPackageImportWizard.xml
@@ -1,10 +1,10 @@
 <?xml version="1.0" encoding="utf-8" ?>
 <SmsFormData FormatVersion="1" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns:xsd="http://www.w3.org/2001/XMLSchema" xmlns="http://schemas.microsoft.com/SystemsManagementServer/2005/03/ConsoleFramework" xsi:schemaLocation="http://schemas.microsoft.com/SystemsManagementServer/2005/03/ConsoleFramework">
-  <Form Id="{4E73BBAE-1A07-4AFE-B2DE-BA9EA7DAF87B}" FormType="Wizard" DisableSkippable="true">
+  <Form Id="{C99F1E99-A601-41DC-998C-54EF4DADF21C}" FormType="Wizard" DisableSkippable="true">
     <Assembly Name="ConfigMgr.QuickTools.DriverManager" Namespace="ConfigMgr.QuickTools.DriverManager" />
     <Pages>
-      <Page VendorId="Otherland" Id="{5AEAE08A-08A7-4B77-8423-EC4D2F61F7F3}" Type="DriverGrabberGeneralPage" />
-      <Page VendorId="Otherland" Id="{846989FD-C6AF-4ED1-84AD-0D85E6D17C98}" Type="DriverGrabberSelectPage" />
+      <Page VendorId="Otherland" Id="{BF8E7D4C-87B8-4F31-8D52-9267DFD17080}" Type="DriverPackageGeneralPage" />
+      <Page VendorId="Otherland" Id="{C11B24EC-E89D-45B7-ACEB-1E32432B3DF0}" Type="DriverPackageImportPage" />
     </Pages>
   </Form>
 </SmsFormData>
